# TorrentsTrackers

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
apps/chat-server/: Cargo.toml
apps/chat-server/src/: config.rs  db.rs  handler.rs  main.rs  state.rs
apps/desktop/: index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
apps/desktop/.tauri/: updater.key.pub
apps/desktop/src/: App.svelte  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  state.rs
apps/desktop/src-tauri/src/ipc/: chat.rs  downloads.rs  dto.rs  identity.rs  magnet.rs  mod.rs  pool.rs  publish.rs  search.rs  source.rs  stats.rs
apps/desktop/src/lib/: ipc.ts  notifications.ts  stores.svelte.ts  types.ts  updater.ts
apps/desktop/src/lib/components/: AddSourceDialog.svelte  Browse.svelte  ChatView.svelte  CommandPalette.svelte  CreatePoolDialog.svelte  DownloadsView.svelte  EntryRow.svelte  FilterPanel.svelte  Header.svelte  IdentityBackupDialog.svelte  Onboarding.svelte  PublishDialog.svelte  Settings.svelte  Sidebar.svelte
crates/chat/: Cargo.toml
crates/chat/examples/: chat_smoke.rs
crates/chat/src/: client.rs  connection.rs  error.rs  lib.rs  protocol.rs
crates/cli/: Cargo.toml
crates/cli/src/: fmt.rs  main.rs
crates/cli/src/commands/: ban.rs  identity.rs  info.rs  mod.rs  open.rs  pool.rs  publish.rs  search.rs  source.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  community.rs  entry.rs  error.rs  filter.rs  ids.rs  lib.rs  magnet.rs  parse.rs  pool.rs  signing.rs  source.rs
crates/downloads/: Cargo.toml
crates/downloads/src/: error.rs  lib.rs  manager.rs
crates/identity/: Cargo.toml
crates/identity/src/: error.rs  keypair.rs  lib.rs  npub.rs  portable.rs  signing.rs  storage.rs
crates/sources/: Cargo.toml
crates/sources/examples/: seed.rs
crates/sources/src/: drive.rs  git.rs  http.rs  lib.rs  local.rs  nostr.rs  server.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  error.rs  lib.rs  migrations.rs  paths.rs  queries.rs
docs/: data-model.md  identity.md  quickstart.md  sources.md  ui-design.md
