[package]
name = "tt-chat-server"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "TorrentsTrackers chat server (axum)."
license = "MIT"

[[bin]]
name = "tt-chat-server"
path = "src/main.rs"

[dependencies]
# Workspace crates
tt-chat = { path = "../../crates/chat" }
tt-core = { path = "../../crates/core" }

# Workspace deps re-imported via path here (apps/* lives outside the workspace).
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ed25519-dalek = "2"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
