[package]
name = "tt-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Chat client for TorrentsTrackers — connects to community-hosted chat servers."

[dependencies]
tt-core.workspace = true
tt-identity.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
async-trait.workspace = true
