[package]
name = "tt-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Chat client for TorrentsTrackers — connects to community-hosted chat servers."

[dependencies]
tt-core.workspace = true
tt-identity.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
futures = "0.3"
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow.workspace = true
tt-identity.workspace = true
