[package]
name = "tt-downloads"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "BitTorrent download manager for TorrentsTrackers (librqbit-based)."

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
chrono.workspace = true
anyhow.workspace = true
dirs.workspace = true
librqbit.workspace = true
