[package]
name = "tt-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Cryptographic identity (ed25519 keypair, signing, verification) for TorrentsTrackers."

[dependencies]
tt-core.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
zeroize.workspace = true
bech32.workspace = true
blake3.workspace = true
thiserror.workspace = true
serde.workspace = true
