[package]
name = "tt-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Cryptographic identity (ed25519 keypair, signing, verification) for TorrentsTrackers."

[dependencies]
tt-core.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand.workspace = true
zeroize.workspace = true
bech32.workspace = true
blake3.workspace = true
thiserror.workspace = true
serde.workspace = true
hex.workspace = true
dirs.workspace = true
keyring.workspace = true
aes-gcm.workspace = true
scrypt.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile = "3"
