[package]
name = "tt-sources"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Source adapter implementations for TorrentsTrackers (Local, HTTP, Git, Drive, Nostr, ...)."

[dependencies]
tt-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
reqwest.workspace = true
