[package]
name = "tt-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SQLite storage layer (entries, sources, pools, messages) for TorrentsTrackers."

[dependencies]
tt-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
hex.workspace = true
uuid.workspace = true
dirs.workspace = true
